# NixieClock-ESP32-idf

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO  TODO.md  flash.gdb  sdkconfig
components/DefaultEventLoop/: CMakeLists.txt  DefaultEventLoop.cpp  DefaultEventLoop.h
components/DynamicIndication/: CMakeLists.txt  Controller.h  DataBus.h  NativeState.h  typed
components/DynamicIndication/DataPolycy/: ic74141ParralelPolcy.h
components/DynamicIndication/Effects/: Fade.h  IEffect.h  NoEffect.h
components/DynamicIndication/EncodePolicy/: Encoder.h  ic74141Encoder.h
components/DynamicIndication/Output/: ParalelOutputBus.h
components/DynamicIndication/SelectorPolicy/: OneOfSelector.h  Selector.h
components/FastLED/: CMakeLists.txt  arduino-calls.cpp
components/FastLED/include/: FakeArduino.h  esp32-hal-gpio.h  esp32-hal.h
components/MHZ_19/: CMakeLists.txt  MHZ19.cpp  MHZ19.h
components/Monitor/: CMakeLists.txt  monitor.cpp  monitor.h
components/NetAdapter/: CMakeLists.txt  IAdapter.h  NetAdapter.cpp  Network.cpp  Network.h  STA.cpp  STA.h  SoftAP.cpp  SoftAP.h
components/Socketstream/: CMakeLists.txt
components/Timer/: CMakeLists.txt  Timer.cpp  Timer.h
components/VoltageSensors/: CMakeLists.txt  MHZ19.cpp  VSensChanel.h  VSensors.cpp  VSensors.h
components/cancellableThread/: CMakeLists.txt  cancellableThread.cpp  cancellableThread.h
components/jsl-esp32/: CMakeLists.txt
components/nlohmann_json/: CMakeLists.txt
main/: CMakeLists.txt  CO2Sensor.cpp  CO2Sensor.h  CPPNVS.cpp  CryticalSection.h  DefaultEventLoop.cpp  DefaultEventLoop.h  GUI.cpp  GUI.h  HttpServer.cpp  HttpServer.h  InterfaceButton.cpp  InterfaceButton.h  NetAdapter.cpp  NetAdapter.h  Nixie.cpp  Nixie.h  RTC.cpp  RTC.h  String_format.cpp  String_format.h  TemperatureSensor.cpp  TemperatureSensor.h  VirtuinoJsonServer.cpp  VirtuinoJsonServer.h  main.cpp  monitor.cpp  monitor.h
main/Animations/: AbstractLedAnimation.cpp  AbstractLedAnimation.h  ProgressLedAnimation.cpp  ProgressLedAnimation.h
main/GUI/: GUI.cpp  GUI.h
main/GUI/Animations/: AbstractLedAnimation.h  ProgressLedAnimation.h
main/GUI/GUIStates/: AbstractGUIState.cpp  AbstractGUIState.h  AbstractGUIStateTransition.h  CO2Monitor.cpp  CO2Monitor.h  ClockState.cpp  ClockState.h  DateDisplayer.cpp  DateDisplayer.h  InitialTransition.cpp  InitialTransition.h  ProgressTransition.cpp  ProgressTransition.h  TemperatureMonitor.cpp  TemperatureMonitor.h  WifiEnabler.h
main/GUIStates/: AbstractGUIState.cpp  AbstractGUIState.h  AbstractGUIStateTransition.h  CO2Monitor.cpp  CO2Monitor.h  ClockState.cpp  ClockState.h  DateDisplayer.cpp  DateDisplayer.h  IGUIState.h  IGUIStateTransition.h  InitialTransition.cpp  InitialTransition.h  ProgressTransition.cpp  ProgressTransition.h  QuickReturnToClock.h  QuickTransition.cpp  QuickTransition.h  TemperatureMonitor.cpp  TemperatureMonitor.h  WifiEnabler.h
main/sensors/: CO2Sensor.cpp  CO2Sensor.h
main/servers/: HttpServer.cpp  HttpServer.h  VirtuinoJsonServer.cpp  VirtuinoJsonServer.h  VirtuinoJsonServer.value_router.cpp  VirtuinoJsonServer.value_router.h  lwip_socket_traits.h  mDNSServer.cpp  mDNSServer.h  my-jsl-parser.cpp  my-jsl-parser.h
